--- a/views/user_settings.ejs
+++ b/views/user_settings.ejs
@@ -47,7 +47,7 @@
 
         <div class="bordered content">
 
-            <h3>User Information</h3>
+            <h3 id="update-user-information"><%= $('header register',Qck.locale[current_language])).text()%></h3>
 
             <form action="/" method="post">
                 <div class="form_item">
