--- a/views/address_register.ejs
+++ b/views/address_register.ejs
@@ -28,7 +28,7 @@
             <input type="text" id="reg-city" name="city" class="addr-city input"/>
         </div>
         <div class="form_item">
-            <label class="label addr-city-label" for="reg-zip"><%= $('create_address_label zip_code',Qck.locale[current_language]).text() %></label>
+            <label class="label addr-zip-code-label" for="reg-zip"><%= $('create_address_label zip_code',Qck.locale[current_language]).text() %></label>
             <input type="text" id="reg-zip" name="city" class="addr-zip input"/>
         </div>
         <div class="form_item">
