--- a/views/cart_item.ejs
+++ b/views/cart_item.ejs
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="right">
-            <button class="remove-btn"><%= $('product_label down',Qck.locale[current_language]).text() %></button>
+            <button class="remove-btn"><%= $('product_label remove',Qck.locale[current_language]).text() %></button>
         </div>
         <div class="clear"></div>
     </div>
